deployments/service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: demo-app
  ports:
      - targetPort: 5000
        protocol: TCP
        port: 5000
